--- a/assembly/build.gradle
+++ b/assembly/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply from: "$rootDir/gradle/shadowRuntime.gradle"
+apply plugin: 'com.github.jk1.dependency-license-report'
+
+import com.github.jk1.license.filter.*
 
 description = "Sparkling Water Assembly"
 
@@ -17,6 +20,8 @@ dependencies {
     compile "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
     compile "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
     compile "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
+
+
 }
 
 jar {
@@ -31,15 +36,22 @@ shadowJar {
 
     relocate 'javassist', 'ai.h2o.javassist'
     relocate 'com.google.common', 'ai.h2o.com.google.common'
-
+    from "$project.buildDir/reports/" include '**/*'
     exclude 'www/flow/packs/test-*/**'
 
     archiveBaseName = "${archiveBaseName.get()}_${scalaBaseVersion}"
+}
+
+licenseReport {
+    allowedLicensesFile = new File("$projectDir/allowed-licenses.json")
+    filters = new LicenseBundleNormalizer(bundlePath: "$projectDir/license-normalizer-bundle.json")
 }
 
 artifacts {
     compile shadowJar
 }
 
+shadowJar.dependsOn generateLicenseReport
+build.dependsOn checkLicense
 build.dependsOn shadowJar
 
