--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         classpath 'com.netflix.nebula:gradle-lint-plugin:10.4.2'
         classpath 'kr.motd.gradle:sphinx-gradle-plugin:2.2.3'
         classpath 'ru.vyarus:gradle-use-python-plugin:1.2.0'
+        classpath 'com.github.jk1:gradle-license-report:1.7'
     }
 }
 
